# multimodal-telegram-bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  bot.py  config.py  db.py  docker-compose.yml  entrypoint.sh  migrate.py  pyproject.toml  scheduler.py  session_lifecycle.py  test_phrases.txt  tg_utils.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_sessions.py  0003_add_reports.py  0004_add_gen_images.py
handlers/: card.py  maps.py  photo.py  report.py  session.py  session_cmd.py  start.py  text_handler.py  voice.py
prompts/: card_session.py  diary.py  metaphor.py  period_report.py  session_report.py  therapist.py
providers/: __init__.py  base.py  gemini.py  gemini_llm.py  whisper.py  yandex.py
