[project]
name = "pem06"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "flask>=3.1.3",
    "google-genai>=1.66.0",
    "openai>=2.26.0",
    "psycopg2-binary>=2.9.11",
    "pytelegrambotapi>=4.32.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
